3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Implement feature request #817585: altars don't take group of same logical item.
Checking logic is now modified to take into account other items apart last dropped item.
This is mainly done by changing check_altar_sacrifice().
 common/button.c: improve check_altar_sacrifice().
 include/libproto.h: update prototype for check_altar_sacrifice().
 server/apply.c: don't remove items, we don't care what we should remove.
 
----
Implement feature request #778211: allow avatars and holy servants to be random.
Changed determine_holy_arch to return one random item instead of first matching one.
 server/gods.c
----
Rename 'new_save_map' to 'save_map'.
 common/map.c
 crossedit/Edit.c
 include/libproto.h
 random_maps/standalone.c
 server/c_wiz.c server.c swap.c weather.c
----
 common/map.c: fix memory leak.
 server/skill_util.c: give a dummy name if skill doesn't have it. Avoids crashing later on :)
Ryo 2007-01-14

Apply long standing patch #1382884: change to player wraith race courtesy Anton Oussik.
 lib/attackmess: new attack messages for feeding.
 lib/treasures: give feeding skill to wraith.
 server/attack.c: feeding skill, life stealing.
 server/skill_util.c: new skill.
 server/player.c: wraiths don't regenerate hp.
 server/apply.c: wraiths don't get anything by eating food.
 include/libproto.h: new functions.
 include/attack.h: new attack message type.
 include/skills.h: new skill.
 common/player.c: wraith-related functions.
Ryo 2007-01-14

Apply patch #1631685: Monster flag set on all monster parts courtesy Aaron Baugher.
 common/arch.c
Ryo 2007-01-14

Object types refactoring: TRIGGER.
    See types ChangeLog for details.
----