@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+types/{dummy.c, Makefile.in, Makefile.am}, include/typesproto.h: Remove dummy
+   file now that it's no longer necessary
+Alex Schultz 2007-01-14
+
 Implement feature request #817585: altars don't take group of same logical item.
 Checking logic is now modified to take into account other items apart last dropped item.
 This is mainly done by changing check_altar_sacrifice().
